--- a/package.json
+++ b/package.json
@@ -9,22 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "better-react-spinkit": "^2.0.4",
     "email-validator": "^2.0.4",
     "firebase": "^9.9.4",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.0.3",
-    "styled-components": "^5.3.5",
     "timeago-react": "^3.0.5"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^2.0.7",
+    "autoprefixer": "^10.4.19",
     "eslint": "8.23.1",
-    "eslint-config-next": "12.3.0"
+    "eslint-config-next": "12.3.0",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.1"
   }
 }
