--- a/Client/package.json
+++ b/Client/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.0.3",
+    "socket.io-client": "^4.7.5",
     "timeago-react": "^3.0.5"
   },
   "devDependencies": {
